--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -5,29 +5,39 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".NewListActivity">
 
     <TextView
-        android:id="@+id/textViewAppTitle"
+        android:id="@+id/textViewNewListTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/title_main_activity"
+        android:text="@string/title_new_list_activity"
         android:textStyle="bold"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/newListButton"
+    <EditText
+        android:id="@+id/editTextListName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:ems="15"
+        android:textSize="20sp"
+        android:inputType="text"
+        android:hint="@string/hint_list_name"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_constraintTop_toBottomOf="@id/textViewNewListTitle"
+        android:layout_marginTop="40dp"/>
+
+    <TextView
+        android:id="@+id/textViewListNameLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_list_name"
+        app:layout_constraintBottom_toTopOf="@+id/editTextListName"
+        app:layout_constraintStart_toStartOf="@+id/editTextListName" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
